# grocy-tools

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
bulk/: main.py
grocy_rest_api_client/: __init__.py
grocy_rest_api_client/models/: __init__.py  api_key.py  battery.py  battery_charge_cycle_entry.py  battery_details_response.py  battery_userfields.py  chore.py  chore_assignment_type.py  chore_details_response.py  chore_log_entry.py  chore_period_type.py  chore_userfields.py  current_battery_response.py  current_chore_response.py  current_stock_response.py  current_task_response.py  current_volatil_stock_response.py  current_volatil_stock_response_missing_products_item.py  db_changed_time_response.py  error_400.py  error_500.py  error_500_error_details.py  exposed_entity.py  exposed_entity_edit_requires_admin.py  exposed_entity_including_user_entities.py  exposed_entity_including_user_entities_not_including_not_editable.py  exposed_entity_no_delete.py  exposed_entity_no_edit.py  exposed_entity_no_listing.py  exposed_entity_not_including_not_deletable.py  exposed_entity_not_including_not_editable.py  exposed_entity_not_including_not_listable.py  external_barcode_lookup_response.py  file_groups.py  get_batteries_battery_id_printlabel_response_200.py  get_calendar_ical_sharing_link_response_200.py  get_chores_chore_id_printlabel_response_200.py  get_files_group_file_name_force_serve_as.py  get_print_shoppinglist_thermal_response_200.py  get_recipes_recipe_id_printlabel_response_200.py  (+67 more)
grocy_tools/: cli.py
grocy_tools/grocy/: service.py
(+88 files in other folders)
